--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -21,6 +21,8 @@
 			<h2>Treating blood pressure</h2>
 			<h3>How can HomeBloodPressure.co.uk help me treat my blood pressure?</h3>
 			<p>This site will tell you what the options are for treating your blood pressure. You’ll be able to see the benefits and disadvantages of any treatments that you may choose. By choosing to use our prescription delivery service you will get your prescriptions delivered to your door. You will be able to arrange to monitor your own blood pressure at a time that is convenient for you. You’ll be the one in charge of your treatment.</p>
+			<h3>Why is medication often recommended?</h3>
+			<p>Although it is very important that you try to lead as healthy a lifestyle as possible, in many cases you need to do more than that. The earlier and more effectively you treat your blood pressure, the more good it does you. This means in the majority of cases where you have high blood pressure, you are best off to start taking medication sooner rather than later.</p>
 		</div>
 		
 		<div id='links'>
