--- a/app/views/static_pages/features.html.erb
+++ b/app/views/static_pages/features.html.erb
@@ -11,10 +11,29 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Features</h2>
-			<p>You'll get clear information about your blood pressure.</p>
-			<p>You’ll get up to date, personalised advice from UK GPs.</p>
-			<p>You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
+			<h2>Features and benefits</h2>
+			<h3>Are you fed up of having to wait at the doctors in order to have your blood pressure monitored?</h3>
+			<p>By using this site, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll be able to see whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you.</p>
+			<p>You’ll be able to access our website (and in the future, app) anytime of the day or night. This means that you’ll avoid having to make repeated telephone calls to your doctor’s surgery to get an appointment. You’ll also be able to measure your blood pressure and record it whenever you want. You won’t have to take time out of your day at inconvenient times for trips to the doctors. Because you can log on straight away, it’ll also mean that you won’t waste time waiting to be seen. Our website is available all day, every day, straight away!</p>
+			<br />
+			<h3>Are you worried that you may be taking unnecessary blood pressure medication?</h3>
+			<p>Another benefit of measuring your blood pressure at home and using our site is that it gives you a more accurate reading of your blood pressure. Because you get a more accurate reading, it means that you’re less likely to need unnecessary treatment based on a few high readings.</p>
+			<p>Your blood pressure tends to go up and down depending on what you’ve been doing. This means that when you measure it at different times of day, you’ll get different readings. Your blood pressure can go up during exercise or after you drink a cup of coffee. It can also go up when you are stressed.</p>
+			<p>Another thing that can send your blood pressure up is going to the doctors. This is known as “white coat hypertension”. It used to be thought that it wasn’t very common. As more research has been done, we now know that for most people your blood pressure is lower when you measure it at home.</p>
+			<p>This means that if you measure your blood pressure at home, it is more likely to give you a true reading of what your blood pressure is. Because it is likely to be slightly lower than when it’s measured elsewhere, it may mean that you don’t need to take medication.</p>
+			<p>For the same reason, because your blood pressure goes up and down, it is better to take an average of a number of readings. This is because an average blood pressure gives a better idea of your risk of having a heart attack or stroke than any single reading.</p>
+			<p>To get the best possible measure of your average blood pressure, you should take the average of two readings. They should be at least one minute apart. This should be done in the morning and in the evening. The more readings that you take, the more accurate the result. You should aim to measure your blood pressure for 7 days. The minimum that you need to get an accurate result is 4 days of measurements.</p>
+			<p>To help you with all this, we’ll remind you to measure your blood pressure, and our easy to use wizard will talk you through the process step by step. This way you can be confident that you’ll be getting the best possible measurement of your blood pressure.</p>
+			<p>Every time you measure your blood pressure, you’ll get a clear display telling you what your average blood pressure is, and whether it is likely that you’ll need treatment. You can also feel safe that if at any point we feel that you need to contact your own doctor, we’ll let you know.</p>
+			<br />
+			<h3>Do you want to be in charge of choosing how you manage your blood pressure?</h3>
+			<p>By using our site, you’ll be presented with clear, easy to understand information about your blood pressure. If you need treatment, then we’ll present you with the different options that are available for you to try. Each option will tell you about the benefits, the common side effects, and the reason that it has been recommended for you.</p>
+			<p>If you don’t like any of the options that we give you, we’ll give you the chance to look at some more. You will have as much time as you want to make up your mind. If you want to log off and take time to think about it then you can. The next time you log on, we’ll be able to give you the same options.</p>
+			<p>By doing this, we’ll put you in charge of your medication choice. You won’t be feeling pressured by a busy doctor into making a decision. You’ll be free to make your decision in your own time. At any point you’ll be able to change your mind, or go back to review the reasons that you made your decision.</p>
+			<p>Once you’ve made your decision there is absolutely no obligation on you to get your medication through our service. If you just want to use our site as a resource to measure and store your average blood pressure then that’s absolutely fine by us, and completely free of charge.</p>
+			<br />
+			<h3>Do you want picking up your prescription to be as easy as a click of your mouse and a knock at your door?</h3>
+			<p>When you decide to use our prescription service, you’ll find out just how cheap and easy it’ll be to get your medication. For a price comparable to only three month’s prescription charges you’ll be able to get your medication delivered to your doorstep. If that doesn’t suit you, then you’ll be able to choose to get your prescription either sent to yourself or your local pharmacy. We’re so confident that you’ll love our service that we’ll give you a 100% money back guarantee if you’re not completely satisfied.</p>
 		</div>
 	</div>
 	
