started chase_user_for_bp email action

--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -21,7 +21,7 @@
 				<% if @bp_entry_details[:bp_given] == 'yes' %>
 					<p>Thank you for entering your recent blood pressure readings.</p>
 				<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
-					<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
+					<p>OK. Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 				<% else %>
 					<p><span class='bigger'>Welcome back <%= current_user.email %></span></p>
 					<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
