--- a/app/views/admin/messages_admin/new.html.erb
+++ b/app/views/admin/messages_admin/new.html.erb
@@ -1,4 +1,4 @@
-<div id='main_full_width'>
+<div id='main'>
 	<h1>Contact ALL users</h1>
 	
 	<p>Warning! You are about to mail ALL users. Use with caution!</p>
