--- a/app/views/admin/admin/menu.html.erb
+++ b/app/views/admin/admin/menu.html.erb
@@ -8,5 +8,6 @@
 		<p>A list of the average of each pair of readings. These are deleted after a full set has been taken. Readings can be edited or deleted. New readings can also be created for testing purposes.</p>
 	<%= link_to("Mail all users", new_admin_message_path) %>
 		<p>Send an email to all users. Be careful!!!</p>
-	<%= link_to("Mail all users missing readings", send_chase_user_for_bp_admin_messages_path, :method => :post) %>
+	<%= link_to("Mail all users with missing readings", chase_user_for_bp_admin_messages_path, :method => :post, data: { confirm: 'Are you sure?' }) %>
+		<p>Send an email to all users who haven't entered a reading (or stated they don't have one) for the current or previous time slot.</p>
 </div>
