chase_user_for_bp formatting

--- a/app/views/notifier/chase_user_for_bp.html.erb
+++ b/app/views/notifier/chase_user_for_bp.html.erb
@@ -4,11 +4,13 @@
     font-size: 18pt;
     margin-bottom: 20px;'>HomeBloodPressure.co.uk</h1>
 
-<p style='margin: 10px 45px 0px 25px;'>Hello from <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>,</p>
+<p style='margin: 5px 25px 5px 25px;'>Hello from <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>,</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Is your blood pressure too high?</p>
+<p style='margin: 5px 25px 5px 25px;'>Is your blood pressure too high?</p>
 
-<p style='padding: 5px 10px 5px 10px;
+<p style='
+	margin: 10px 0px 10px 0px;
+	padding: 5px 10px 5px 10px;
       border-style:solid;
       border-width:2px;
       border-color:#aedd94;
@@ -19,15 +21,17 @@
       text-align: center;
       font-size:12pt;'>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> now to take another pair of blood pressure readings.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Taking several readings will give you an accurate measurement of what your blood pressure is really like.</p>
+<p style='margin: 5px 25px 5px 25px;'>Taking several readings will give you an accurate measurement of what your blood pressure is really like.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
+<p style='margin: 5px 25px 5px 25px;'>Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Remember, by using <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>, you can measure your own blood pressure at home. You have a safe place to store the readings. You can see when your next reading is due. You will know whether your blood pressure needs treating. And you can do everything at a time and place that suits you…</p>
+<p style='margin: 5px 25px 5px 25px;'>Remember, by using <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>, you can measure your own blood pressure at home. You have a safe place to store the readings. You can see when your next reading is due. You will know whether your blood pressure needs treating. And you can do everything at a time and place that suits you…</p>
 
-<p style='margin: 10px 45px 0px 25px;'>If you decide that your blood pressure needs to be treated then you can take advantage of our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.</p>
+<p style='margin: 5px 25px 5px 25px;'>If you decide that your blood pressure needs to be treated then you can take advantage of our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.</p>
 
-<p style='padding: 5px 10px 5px 10px;
+<p style='
+	margin: 10px 0px 10px 0px;
+	padding: 5px 10px 5px 10px;
       border-style:solid;
       border-width:2px;
       border-color:#aedd94;
@@ -38,8 +42,8 @@
       text-align: center;
       font-size:12pt;'>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> now to take another pair of blood pressure readings.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>If you have any questions for us, we’d love to hear from you. Please <%= link_to 'contact us here', new_message_url %>.</p>
+<p style='margin: 5px 25px 5px 25px;'>If you have any questions for us, we’d love to hear from you. Please <%= link_to 'contact us here', new_message_url %>.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Dr Colin Coulthard and Dr Richard Thomas - <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> founders.</p>
+<p style='margin: 5px 25px 5px 25px;'>Dr Colin Coulthard and Dr Richard Thomas - <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> founders.</p>
 
 </div>
