adding copy to info pages

--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -20,19 +20,19 @@
 		<div id='strip3_content'>
 			<h2>What is blood pressure?</h2>
 			<h3>Use HomeBloodPressure.co.uk to find out more about your blood pressure</h3>
-			<p>By using this site you’ll be presented with clear information about your blood pressure. You’ll be able to see this information whenever you want without having to wait for an appointment. The advice is written by experienced UK trained GPs and will be based on your personal blood pressure readings. You’ll be able to read about what this may mean about your lifestyle and can get help to decide whether you may need treatment.</p>
+			<p>By using this site you’ll be getting clear information about your blood pressure. You’ll get up to date personalised advice from UK GPs. You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_what_am_i_measuring_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>What am I measuring?</span></span>
 				<%= image_tag("woman_apple_small_2.jpg") %>
-				<span class='link_text'>Your blood pressure is a measure of the pressure in your arteries. This gives you an idea of how hard your heart is having to work to pump blood around your body - find out more here...</span>
+				<span class='link_text'>Both numbers are important; they measure the pressure in your arteries at the highest and lowest points of your pulse. Find out more here...</span>
 			<% end %>
 			<%= link_to(info_what_do_the_numbers_mean_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>What do the numbers mean?</span></span>
 				<%= image_tag("relaxation_small.jpg") %>
-				<span class='link_text'>Both numbers are important; they measure the pressure in your arteries at the highest and lowest points of your pulse. Find out more here...</span>
+				<span class='link_text'>Your blood pressure is a measure of the pressure in your arteries. This gives you an idea of how hard your heart is having to work to pump blood around your body - find out more here…</span>
 			<% end %>
 			<%= link_to(info_what_is_the_normal_range_for_me_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>What is the normal range?</span></span>
