--- a/app/views/info/info/what_is_the_normal_range_for_me.html.erb
+++ b/app/views/info/info/what_is_the_normal_range_for_me.html.erb
@@ -19,7 +19,17 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>What is the normal blood pressure range for me?</h2>
-			<p>Text about the factors that can influence the normal BP range and some examples of normal ranges.</p>
+			<p>Sadly there isn’t one magic ‘normal’ range for blood pressure. For a start, what is normal depends on where you are when the readings are taken. Everything written below is based upon readings taken at home using your own blood pressure monitor (there are different normal ranges for readings taken in clinics or at hospital).</p>
+			<p>Doctors have also decided that what might be a healthy blood pressure for one person, might not be good for another person. This depends upon what other illnesses you may have. Some illnesses can make the bad effects of high blood pressure even worse. So, if you have these illnesses, we recommend keeping your blood pressure lower.</p>
+			<br />
+			<h3>What are the illnesses that make the effects of high blood pressure worse?</h3>
+			<p>The most common illness that makes the bad effects of high blood pressure even worse is diabetes. The other groups of people that are advised to keep their blood pressure under tighter control are those who have suffered a heart attack or stroke, or have angina or bad circulation. We know that people with these conditions are more likely to have complications from high blood pressure.</p>
+			<br />
+			<h3>So what is the normal range if I have one of these conditions?</h3>
+			<p>Well, this changes too depending on the exact nature of the condition! But as a guide, the upper limit of normal blood pressure will be between 130/80 mmHg and 145/85 mmHg. By using HomeBloodPressure.co.uk to record your blood pressure, you will get personalised advice to tell you if your blood pressure is too high. This will be based on your own medical details.</p>
+			<br />
+			<h3>I’m completely fit and well. What is the normal range for me?</h3>
+			<p>That’s an easier question to answer! If you have no medical conditions then the upper limit of a healthy blood pressure is considered to be 150/95 mmHg.  If you have already been diagnosed with high blood pressure then your target blood pressure will be lower.</p>
 		</div>
 	
 	</div>
