--- a/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h1>When you should measure your blood pressure</h1>
+			<h1>How you can measure your blood pressure</h1>
 			<p id='first'>FREE advice from UK GPs.</p>
 			<p id='second'>Online. Anytime.</p>
 			<div class='clear_float'></div>
@@ -19,7 +19,8 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>When should I measure my blood pressure?</h2>
-			<p>Text advising people when to measure their blood pressure.</p>
+			<p>Your blood pressure varies from hour to hour so one or two readings can be misleading. Doctors recommend taking a set of readings over at least 4 days to get a reliable measurement. By using HomeBloodPressure.co.uk you will be guided through taking your readings step by step so you can be sure you’ve got an accurate measurement.</p>
+			<p>You should measure your blood pressure each morning and evening, and on each occasion you should take two readings one minute apart. Our website will help you keep track of this with email reminders and clear instructions.</p>
 		</div>
 	
 	</div>
