--- a/app/views/info/info/what_am_i_measuring.html.erb
+++ b/app/views/info/info/what_am_i_measuring.html.erb
@@ -19,7 +19,13 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>What am I measuring?</h2>
-			<p>Text about what blood pressure is.</p>
+			<p>When you measure your blood pressure you will get two numbers. The bigger number is called your systolic blood pressure and the smaller number is called your diastolic blood pressure. The measurements are made in units called millimetres of mercury (or mmHg). Both numbers are important.</p>
+			<br />
+			<h3>Systolic blood pressure</h3>
+			<p>The bigger number (systolic) is a measure of the pressure in your arteries at the highest point of your pulse. This is when your heart is pumping the blood around your body.</p>
+			<br />
+			<h3>Diastolic blood pressure</h3>
+			<p>The smaller number (diastolic) is a measure of the pressure in your arteries at the lowest point of your pulse. This is when your heart is relaxing between heart beats.</p>
 		</div>
 	
 	</div>
