copy transferred to site

--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -126,7 +126,7 @@
         }
       }
         
-      #links {
+      #links, #links_2 {
         width: 540px;
         margin-left: auto;
         margin-right: auto;
@@ -269,6 +269,10 @@
             display: block;
           }
         }
+      }
+      
+      #links_2 {
+        width: 360px;
       }
     }
     
