--- a/app/views/info/info/a2rbs.html.erb
+++ b/app/views/info/info/a2rbs.html.erb
@@ -20,10 +20,10 @@
 		<div id='strip3_content'>
 			<h2>A2RBs</h2>
 			<h3>Benefits</h3>
-			<p>Text about benefits of these meds.</p>
+			<p>You will generally only be started on these medications if you get a dry cough from being on an ACE inhibitor. Although they have less side effects, there is not as much evidence as to their effectiveness as there is for ACE inhibitors as they are a newer group of medications. However, it is likely that they share similar benefits to ACE inhibitors.</p>
 			<br />
 			<h3>Side effects</h3>
-			<p>Text about possible side effects of these meds.</p>
+			<p>Like their close relations ACE inhibitors, sometimes when you first start taking them these medications can make you feel dizzy. This usually gets better after you’ve been taking them for a couple of days.</p>
 		</div>
 	
 	</div>
