--- a/app/views/info/info/acupuncture.html.erb
+++ b/app/views/info/info/acupuncture.html.erb
@@ -18,8 +18,8 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Can acupuncture help treat my blood pressure?</h2>
-			<p>Text about acupuncture.</p>
+			<h2>How can acupuncture help my blood pressure?</h2>
+			<p>Although you may wish to try acupuncture to see if it helps with your blood pressure, at the moment we do not know whether it is helpful.</p>
 		</div>
 
 	</div>
