--- a/app/views/info/info/diuretics.html.erb
+++ b/app/views/info/info/diuretics.html.erb
@@ -20,10 +20,10 @@
 		<div id='strip3_content'>
 			<h2>Diuretics</h2>
 			<h3>Benefits</h3>
-			<p>Text about benefits of these meds.</p>
+			<p>These days diuretics are most commonly used as a second line or additional treatment for blood pressure. They will lower your blood pressure and also protect you from some of the conditions that high blood pressure can cause. However, for most people they aren’t as effective as calcium channel blockers or ACE inhibitors.</p>
 			<br />
 			<h3>Side effects</h3>
-			<p>Text about possible side effects of these meds.</p>
+			<p>You may know diuretics as “water tablets”. Unsurprisingly their common side effects include making you pass urine more often. However, with most diuretics used to treat high blood pressure, this tends to wear off over a week or two. If you are taking diuretics then your kidney function should be monitored by a blood test.</p>
 		</div>
 	
 	</div>
