--- a/app/views/info/info/how_can_i_reduce_the_risk_of_side_effects.html.erb
+++ b/app/views/info/info/how_can_i_reduce_the_risk_of_side_effects.html.erb
@@ -19,8 +19,13 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>How can I reduce the risk of side effects?</h2>
+			<p>Being better informed about the nature of side effects reduces their impact on your life. This can reduce their severity.</p>
+			<br />
 			<h3>Benefits of using HomeBloodPressure.co.uk to get medication</h3>
-			<p>Explain benefits of using our site to get meds, using home readings etc.</p>
+			<p>By using our site, you’ll be presented with clear, easy to understand information about your blood pressure. If you need treatment, then we’ll present you with the different options that are available for you to try. Each option will tell you about the benefits, the common side effects, and the reason that it has been recommended for you.</p>
+			<p>If you don’t like any of the options that we give you, we’ll give you the chance to look at some more. You will have as much time as you want to make up your mind. If you want to log off and take time to think about it then you can. The next time you log on, we’ll be able to give you the same options.</p>
+			<p>By doing this, we’ll put you in charge of your medication choice. You won’t be feeling pressured by a busy doctor into making a decision. You’ll be free to make your decision in your own time. At any point you’ll be able to change your mind, or go back to review the reasons that you made your decision.</p>
+			<p>Once you’ve made your decision there is absolutely no obligation on you to get your medication through our service. If you just want to use our site as a resource to measure and store your average blood pressure then that’s absolutely fine by us, and completely free of charge.</p>
 		</div>
 	
 	</div>
