--- a/app/views/info/info/lifestyle_options.html.erb
+++ b/app/views/info/info/lifestyle_options.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h1>Your lifestyle can improve your blood pressure</h1>
+			<h1>Your choice of blood pressure treatment</h1>
 			<p id='first'>FREE advice from UK GPs.</p>
 			<p id='second'>Online. Anytime.</p>
 			<div class='clear_float'></div>
@@ -19,24 +19,24 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Lifestyle options for treating blood pressure</h2>
-			<p>Text that skims the surface of some lifestyle stuff. Or maybe no text here? Or something to promote the site further?</p>
+			<p>You can usually make some small changes to your lifestyle that will improve your blood pressure. The good news is that these changes tend to improve your health in general so you’ve nothing to lose!</p>
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_diet_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Food and drink</span></span>
 				<%= image_tag("woman_apple_small_2.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how food and drink can influence their blood pressure.</span>
+				<span class='link_text'>What can I eat to help my blood pressure? What about the things that I drink? Find out here...</span>
 			<% end %>
 			<%= link_to(info_exercise_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Exercise</span></span>
 				<%= image_tag("relaxation_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how exercise may improve their blood pressure.</span>
+				<span class='link_text'>How does exercise help my blood pressure? How much exercise do I need to do? Find out here...</span>
 			<% end %>
 			<%= link_to(info_smoking_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>Smoking</span></span>
 				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how smoking affects their blood pressure.</span>
+				<span class='link_text'>How does smoking affect my blood pressure? Find out here...</span>
 			<% end %>
 			
 			<div class='clear_float'>
