--- a/app/views/info/info/medication.html.erb
+++ b/app/views/info/info/medication.html.erb
@@ -19,24 +19,24 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Medication</h2>
-			<p>General text about medications, e.g. that there are many sorts, that most are well tolerated, that we can help people understand them etc.</p>	
+			<p>There are many different medications to treat high blood pressure. The right one for you will depend on a number of factors. This is where we can help. By using HomeBloodPressure.co.uk you will get advice about the best medication options for you, based on your medical details.</p>	
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_what_are_the_best_medication_options_for_me_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>What are the best medication options for me?</span></span>
 				<%= image_tag("woman_apple_small_2.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about different medications.</span>
+				<span class='link_text'>What different types of medication are available? How do I know which is best for me? Find out here...</span>
 			<% end %>
 			<%= link_to(info_how_can_i_reduce_the_risk_of_side_effects_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>How can I reduce the risk of side effects?</span></span>
 				<%= image_tag("relaxation_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about side effects.</span>
+				<span class='link_text'>How does using this website reduce the risk of side effects? Find out here...</span>
 			<% end %>
 			<%= link_to(info_why_do_i_need_to_take_more_than_one_medication_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>Why do I need to take more than one medication?</span></span>
 				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about multiple medications such as why the doses are different etc.</span>
+				<span class='link_text'>Why isn’t one medication enough? Can’t I just take a higher dose? Find out here...</span>
 			<% end %>
 			
 			<div class='clear_float'>
