--- a/app/views/info/info/smoking.html.erb
+++ b/app/views/info/info/smoking.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h1>Your lifestyle can improve your blood pressure</h1>
+			<h1>Your choice of blood pressure treatment</h1>
 			<p id='first'>FREE advice from UK GPs.</p>
 			<p id='second'>Online. Anytime.</p>
 			<div class='clear_float'></div>
@@ -19,9 +19,9 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>How does smoking affect my blood pressure?</h2>
-			<p>Text about general effects of smoking on BP</p>
+			<p>You may be amazed to find that there is no direct link between smoking and high blood pressure.</p>
 			<h3>Why stopping smoking will help you anyway</h3>
-			<p>Text about general effects of smoking and how these are a negative influence on the same outcomes as high BP.</p>
+			<p>Stopping smoking is the single best thing that you can do to help reduce the risk of having a heart attack or a stroke. The main worry for most people with high blood pressure is that, like smoking, it increases the risk of heart attacks and strokes. So even if a direct link between smoking and high blood pressure hasn’t been found, if you are worried about your blood pressure, it certainly makes sense to stop smoking.</p>
 		</div>
 	
 	</div>
