--- a/app/views/info/info/supplements.html.erb
+++ b/app/views/info/info/supplements.html.erb
@@ -18,8 +18,8 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Can supplements help treat my blood pressure?</h2>
-			<p>Text about supplements.</p>
+			<h2>Which supplements can help treat my blood pressure?</h2>
+			<p>You may wish to try supplements to control your blood pressure. Unfortunately calcium and magnesium supplements have not been shown to have a clinically significant effect on your blood pressure. And contrary to popular belief, potassium supplements have no effect on your blood pressure at all.</p>
 		</div>
 
 	</div>
