--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -29,17 +29,17 @@
 			<%= link_to(info_lifestyle_options_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Lifestyle options</span></span>
 				<%= image_tag("woman_apple_small_2.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how lifestle changes can improve their blood pressure.</span>
+				<span class='link_text'>What can I change to help my blood pressure? What should I eat? What about exercise? Find out here...</span>
 			<% end %>
 			<%= link_to(info_complementary_therapy_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Complementary therapy</span></span>
 				<%= image_tag("relaxation_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how complementary therapies may improve their blood pressure.</span>
+				<span class='link_text'>Which natural supplements can help my blood pressure? What about acupuncture? Find out here...</span>
 			<% end %>
 			<%= link_to(info_medication_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>Medication</span></span>
 				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about medications such as how they work, side effects, which is best.</span>
+				<span class='link_text'>What is the best medication for me? How can I reduce the risk of side effects? Why do I need more than one medication? Find out here...</span>
 			<% end %>
 			
 			<div class='clear_float'>
