--- a/app/views/info/info/beta_blockers.html.erb
+++ b/app/views/info/info/beta_blockers.html.erb
@@ -20,10 +20,10 @@
 		<div id='strip3_content'>
 			<h2>Beta blockers</h2>
 			<h3>Benefits</h3>
-			<p>Text about benefits of these meds.</p>
+			<p>These days beta-blockers are generally only added to other medications if your blood pressure hasn’t already come down. Just like diuretics, we know they work but in most people they are less effective than calcium channel blockers or ACE inhibitors.</p>
 			<br />
 			<h3>Side effects</h3>
-			<p>Text about possible side effects of these meds.</p>
+			<p>The most common side effect is feeling tired. This is worse at higher doses so can sometimes be relieved by reducing the dose.</p>
 		</div>
 	
 	</div>
