--- a/app/views/info/info/calcium_channel_blockers.html.erb
+++ b/app/views/info/info/calcium_channel_blockers.html.erb
@@ -20,10 +20,10 @@
 		<div id='strip3_content'>
 			<h2>Calcium channel blockers</h2>
 			<h3>Benefits</h3>
-			<p>Text about benefits of these meds.</p>
+			<p>If you’re of African or Caribbean origin, or over 55 years old of any ethnicity, then calcium channel blockers will probably be the first choice medication for you. This is because they are one of the most effective types of medication at preventing heart attacks and strokes in people with high blood pressure.</p>
 			<br />
 			<h3>Side effects</h3>
-			<p>Text about possible side effects of these meds.</p>
+			<p>If you are using them at higher doses then sometimes they can cause swelling around the ankles. If you reduce the dose then this usually gets better.</p>
 		</div>
 	
 	</div>
