--- a/app/views/info/info/complementary_therapy.html.erb
+++ b/app/views/info/info/complementary_therapy.html.erb
@@ -19,24 +19,18 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Complementary therapy for high blood pressure</h2>
-			<p>Text skimming surface of various complementary therapy treatments... or nothing... or site promotion...</p>
 		</div>
 		
-		<div id='links'>
+		<div id='links_2'>
 			<%= link_to(info_supplements_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Supplements</span></span>
 				<%= image_tag("woman_apple_small_2.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how supplements can improve their blood pressure.</span>
+				<span class='link_text'>Which supplements can help my blood pressure? Find out here...</span>
 			<% end %>
 			<%= link_to(info_acupuncture_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Acupuncture</span></span>
 				<%= image_tag("relaxation_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how acupuncture may improve their blood pressure.</span>
-			<% end %>
-			<%= link_to(info_herbal_remedies_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Herbal remedies</span></span>
-				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>Text containing the sorts of questions people may have about how herbal remedies may improve their blood pressure.</span>
+				<span class='link_text'>How can acupuncture help my blood pressure? Find out here...</span>
 			<% end %>
 			
 			<div class='clear_float'>
