--- a/app/views/info/info/diet.html.erb
+++ b/app/views/info/info/diet.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h1>Your lifestyle can improve your blood pressure</h1>
+			<h1>Your choice of blood pressure treatment</h1>
 			<p id='first'>FREE advice from UK GPs.</p>
 			<p id='second'>Online. Anytime.</p>
 			<div class='clear_float'></div>
@@ -19,11 +19,16 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>How can my diet help my blood pressure?</h2>
+			<p>If you have high blood pressure, then there are two simple things that you can change that will help lower it. They are to lose some weight, and reduce the amount of salt in your diet.</p>
+			<br />
 			<h3>What can I eat to help my blood pressure?</h3>
-			<p>Text about dietary factors.</p>
+			<p>The current most successful advice remains to eat a high fibre and low fat diet. You should also try to reduce the size of your portions. Cutting down on red meat and eating more green leafy vegetables will also help with your health.</p>
+			<p>Secondly, controlling the amount of salt that you get in your diet can help. You may find this difficult, especially if you don’t get the chance to cook from scratch. This is because processed foods tend to have a lot of hidden salt in them. So do foods such as cereals, cheese and bread. Reducing the amount of salt in your diet can help to reduce your blood pressure.</p>
+			<p>Unfortunately it is unlikely that using salt substitutes is effective in controlling blood pressure.</p>
 			<br />
 			<h3>What about the things that I drink?</h3>
-			<p>Text about drink.</p>
+			<p>The best thing that you can do to help with your blood pressure is to cut down the amount of alcohol that you drink. This can also help you to lose weight which will also help with your blood pressure.</p>
+			<p>Another drink that can affect your blood pressure is coffee. However as long as you drink it in moderation it is unlikely to be harmful. “In moderation” means less than 5 cups a day.</p>
 		</div>
 	
 	</div>
