--- a/app/views/info/info/why_do_i_need_to_take_more_than_one_medication.html.erb
+++ b/app/views/info/info/why_do_i_need_to_take_more_than_one_medication.html.erb
@@ -19,9 +19,10 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Why do I need to take more than one medication?</h2>
-			<p>Explanation of synergy as was in original copy.</p>
+			<p>Often you will find that a single medication is not enough to bring your blood pressure down on it’s own. This means that you will need to take more than one medication. In many cases you will also get a bonus effect in that the combination of medications will reduce your blood pressure more than just the cumulative effect of each individual medication. This is called synergy.</p>
+			<br />
 			<h3>Why do I need to take a high dose of one medication and a low dose of another?</h3>
-			<p>Explanation for the non-comparability of medication dosages.</p>
+			<p>With some medications a low dose is enough to get all the benefits. With others, the higher the dose that you take, the greater the benefits.</p>
 		</div>
 	
 	</div>
